--- a/package.json
+++ b/package.json
@@ -15,19 +15,6 @@
   "scripts": {
     "test": "browserify test.js | testling -x open"
   },
-  "testling": {
-    "files": "test.js",
-    "browsers": [
-      "ie/6..latest",
-      "chrome/22..latest",
-      "firefox/16..latest",
-      "safari/latest",
-      "opera/11.0..latest",
-      "iphone/6",
-      "ipad/6",
-      "android-browser/latest"
-    ]
-  },
   "repository": {
     "type": "git",
     "url": "git://github.com/mattdesl/webgl-compile-shader.git"
@@ -38,5 +25,21 @@
   "homepage": "https://github.com/mattdesl/webgl-compile-shader",
   "bugs": {
     "url": "https://github.com/mattdesl/webgl-compile-shader/issues"
+  },
+  "testling": {
+    "files": "test.js",
+    "browsers": [
+      "ie/8..latest",
+      "firefox/17..latest",
+      "firefox/nightly",
+      "chrome/22..latest",
+      "chrome/canary",
+      "opera/12..latest",
+      "opera/next",
+      "safari/5.1..latest",
+      "ipad/6.0..latest",
+      "iphone/6.0..latest",
+      "android-browser/4.2..latest"
+    ]
   }
 }
