--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "tape": "~2.13.2"
   },
   "scripts": {
-    "test-browser": "browserify test.js | testling -x open"
+    "test": "browserify test.js | testling -x open"
   },
   "repository": {
     "type": "git",
